--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.4",
     "web-vitals": "^2.1.4"
@@ -20,13 +21,31 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint src --fix"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "indent": [
+        "warn",
+        2
+      ],
+      "quotes": [
+        "warn",
+        "double"
+      ],
+      "eol-last": [
+        "warn",
+        "always"
+      ],
+      "semi": [
+        "warn",
+        "never"
+      ]
+    }
   },
   "browserslist": {
     "production": [
