--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.14",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.4",
     "web-vitals": "^2.1.4"
