--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
+    "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.4",
     "web-vitals": "^2.1.4"
